--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "keywords": [
     "Solid.js"
   ],
-  "author": "Hiroki Minagawa <minagawa@tokyo800.jp>",
+  "author": "minagawah <minag@tokyo800.jp>",
   "license": "(Unlicense OR MIT)",
   "bugs": {
     "url": "https://github.com/minagawah/solid-storage-example/issues"
